--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -1,6 +1,87 @@
 @import "tailwindcss";
+/* @import 'tw-animate-css'; */
+
+
+@custom-variant dark (&:is(.dark *));
+
+@theme inline {
+  /* spharos: {
+    'green': '#00B140',
+    'green-light': '#E6F9E8',
+    'green-dark': '#007A2D',
+    'blue-black': '#1A1A1A',
+    'blue-black-light': '#F5F5F5',
+    'gray': '#B7B7B7',
+    'gray-light': '#F2F2F2',
+    'gray-dark': '#4D4D4D',
+    'white': '#FFFFFF',
+  }, */
+  --color-spharos-primary: #0fff63;
+  --color-spharos-green: #00b140;
+  --color-spharos-green-light: #e6f9e8;
+  --color-spharos-green-14: rgba(38, 204, 96, 0.14);
+  --color-spharos-green-42: rgba(38, 204, 96, 0.42);
+  --color-spharos-green-dark: #007a2d;
+  --color-spharos-blue-black: #1a1a1a;
+  --color-spharos-blue-black-light: #f5f5f5;
+  --color-spharos-gray: #626262;
+  --color-spharos-gray-light: #f2f2f2;
+  --color-spharos-gray-dark: #4d4d4d;
+  --color-spharos-white: #ffffff;
+  --color-spharos-black: #000000;
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+}
 
 :root {
+  --color-spharos-primary: #0fff63;
+  --color-spharos-green: #00b140;
+  --color-spharos-green-light: #e6f9e8;
+  --color-spharos-green-14: rgba(38, 204, 96, 0.14);
+  --color-spharos-green-42: rgba(38, 204, 96, 0.42);
+  --color-spharos-green-dark: #007a2d;
+  --color-spharos-blue-black: #1a1a1a;
+  --color-spharos-blue-black-light: #f5f5f5;
+  --color-spharos-gray: #626262;
+  --color-spharos-gray-light: #f2f2f2;
+  --color-spharos-gray-dark: #4d4d4d;
+  --color-spharos-white: #ffffff;
+  --color-spharos-black: #000000;
   --background: 0 0% 100%;
   --foreground: 222.2 84% 4.9%;
   --card: 0 0% 100%;
